# community

./: .env  .gitignore  Cargo.toml  README.md
core_app/: Cargo.toml
core_app/migrations/: 20230910224258_init_tables.sql
core_app/src/: context.rs  error.rs  lib.rs  models.rs  prelude.rs  repo.rs
core_app/src/models/: household.rs  household_member.rs
core_app/src/repo/: connect.rs  create_household.rs  create_household_member.rs  delete_household.rs  delete_household_member.rs  fetch_household.rs  fetch_household_member.rs  filter_households.rs  update_household.rs  update_household_member.rs
core_app/src/utils/: mod.rs  split_while_trait.rs
web_backend/: Cargo.toml
web_backend/src/: assets.rs  error.rs  main.rs
web_backend/src/api/: create_household.rs  create_member.rs  delete_household.rs  delete_member.rs  filter_households.rs  mod.rs  update_household.rs  update_member.rs
web_frontend/: Cargo.toml  index.html
web_frontend/src/: main.rs  routes.rs
web_frontend/src/components/: households.rs  mod.rs
web_frontend/src/components/households/: create_household.rs
