[package]
name = "core_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at:
#   https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
