[package]
name = "web_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at:
#   https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = { version = "0.17" }
yew-hooks = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
gloo-net = { version = "0.2" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
